--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,9 @@
 			<groupId>org.springframework.boot</groupId>		<artifactId>spring-boot-starter-validation</artifactId>
 	</dependency>
 	<dependency>
-		<groupId>org.springframework.boot</groupId>			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
 		</dependency>
 	</dependencies>
 
