--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=ipss.web2.examen
+
+# ==================== DATABASE CONFIGURATION - MYSQL RDS ====================
+spring.datasource.url=jdbc:mysql://db-ipss.cb2es8a2cxpo.us-east-2.rds.amazonaws.com:3306/web2_examen
+spring.datasource.username=admin
+spring.datasource.password=totoralillo12..
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# ==================== SWAGGER / OPENAPI ====================
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.show-actuator=true
