--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,16 +14,16 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # ==================== SWAGGER / OPENAPI ====================
-springdoc.api-docs.path=/api-docs
+springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.tags-sorter=alpha
 
 
 # ==================== ERROR HANDLING - INVALID ENDPOINTS ====================
-# Lanza excepción cuando no encuentra un endpoint (en lugar de devolver 404 de recurso estático)
 spring.mvc.throw-exception-if-no-handler-found=true
-# Desactiva la búsqueda de recursos estáticos
 spring.web.resources.add-mappings=false
 
 # ==================== SERVER CONFIGURATION ====================
@@ -34,3 +34,12 @@ server.servlet.context-path=/
 logging.level.root=INFO
 logging.level.ipss.web2.examen=DEBUG
 logging.level.org.springframework.web=DEBUG
+
+# Logs más legibles para endpoints
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=INFO
+
+# Habilitar colores ANSI en consola
+spring.output.ansi.enabled=ALWAYS
+
+# Información adicional en startup
+spring.main.log-startup-info=true
