--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ipss.web2.examen
+
 
 # ==================== DATABASE CONFIGURATION - MYSQL RDS ====================
 spring.datasource.url=jdbc:mysql://db-ipss.cb2es8a2cxpo.us-east-2.rds.amazonaws.com:3306/web2_examen
@@ -30,16 +30,26 @@ spring.web.resources.add-mappings=false
 server.port=8080
 server.servlet.context-path=/
 
-# ==================== LOGGING ====================
+# ==================== LOGGING - COLORES Y CLARIDAD ====================
 logging.level.root=INFO
 logging.level.ipss.web2.examen=DEBUG
-logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.boot=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# Logs más legibles para endpoints
-logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=INFO
-
-# Habilitar colores ANSI en consola
+# Colores ANSI en consola
 spring.output.ansi.enabled=ALWAYS
 
-# Información adicional en startup
+# Banner personalizado
+spring.application.name=IPSS WEB2 EXAMEN
 spring.main.log-startup-info=true
+
+# Log pattern con colores
+logging.pattern.console=%d{HH:mm:ss.SSS} %highlight(%-5level) %cyan([%thread]) %yellow(%logger{36}) : %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# ==================== ACTUATOR - MONITOREO ====================
+management.endpoints.web.exposure.include=health,info,metrics,env
+management.endpoint.health.show-details=always
+management.info.env.enabled=true
